dnl Yo Yo Yo
AC_INIT(src/iax.c)
AC_CONFIG_AUX_DIR(build)
AM_INIT_AUTOMAKE([iax], [0.2.3])


#Set default language
AC_LANG_C
dnl Check for various goodies
AC_PROG_CC
AM_PROG_LIBTOOL
dnl LIBTOOL="$LIBTOOL --silent"
AC_PROG_INSTALL


#Check for compiler vendor
AX_COMPILER_VENDOR

#  Optimize
AC_ARG_ENABLE(optimization,
[AC_HELP_STRING([--enable-optimization],[Set if you want us to add max optimising compiler flags])],[enable_optimizer="$enableval"],[enable_optimizer="no"])

if test "${enable_optimizer}" = "yes" ; then
        AC_DEFINE([OPTIMZER],[],[Enable Optimization.])
        AX_CC_MAXOPT
fi

#  Enable debugging
AC_ARG_ENABLE(debug,
[AC_HELP_STRING([--enable-debug],[build with debug information])],[enable_debug="$enable_debug"],[enable_debug="yes"])

if test "${enable_debug}" = "yes"; then
        AC_DEFINE([DEBUG],[],[Enable extra debugging.])
        AX_CFLAGS_WARN_ALL_ANSI
fi

AM_CONDITIONAL([WANT_DEBUG],[test "${enable_debug}" = "yes"])


case "$host" in
                *-solaris2*)
                        if test "x${ax_cv_c_compiler_vendor}"  =  "xsun" ; then                                SOLINK="-Bdynamic -dy -G"
                                new_AM_CFLAGS="-KPIC -DPIC"
                                new_AM_LDFLAGS="-L${prefix}/lib -R${prefix}/lib"
                                IN_LINE=""
                        elif test "x${ax_cv_c_compiler_vendor}" = "xgnu" ; then                                SOLINK="-Bdynamic -dy -G"
                                new_AM_CFLAGS="-fPIC"
                                new_AM_LDFLAGS=""
                                IN_LINE=inline
                        fi
                        DYNAMIC_LIB_EXTEN="so"
                ;;
                *-darwin*)
                        if test "x${ax_cv_c_compiler_vendor}"="xgnu" ; then
                                SOLINK="-dynamic -bundle -force-flat-namespace"
                                new_AM_CFLAGS="-DMACOSX"
                                new_AM_LDFLAGS=""
                        fi
                        DYNAMIC_LIB_EXTEN="dylib"
                        IN_LINE=inline
                ;;
                x86_64-*-linux-gnu)
                        if test "x${ax_cv_c_compiler_vendor}" = "xsun" ; then
                                SOLINK="-Bdynamic -dy -G"
                                new_AM_CFLAGS="-KPIC -DPIC"
                                new_AM_LDFLAGS="-L${prefix}/lib -R${prefix}/lib"
                        elif test "x${ax_cv_c_compiler_vendor}"="xgnu" ; then
                                SOLINK="-shared -Xlinker -x"
                                new_AM_CFLAGS="-fPIC"
                                new_AM_LDFLAGS=""
                        fi
                        DYNAMIC_LIB_EXTEN="so"
                        IN_LINE=inline
                ;;
                i*6-*-linux-gnu)
                        if test "x${ax_cv_c_compiler_vendor}" = "xsun" ; then
                                SOLINK="-Bdynamic -dy -G"
                                new_AM_CFLAGS="-KPIC -DPIC"
                                new_AM_LDFLAGS="-L${prefix}/lib -R${prefix}/lib"
                        elif test "x${ax_cv_c_compiler_vendor}"="xgnu" ; then
                                SOLINK="-shared -Xlinker -x"
                                new_AM_CFLAGS="-fpic"
                                new_AM_LDFLAGS=""
                        fi
                        DYNAMIC_LIB_EXTEN="so"
                        IN_LINE=inline
                ;;
              *)
                        if test "x${ax_cv_c_compiler_vendor}" = "xsun" ; then
                                SOLINK="-Bdynamic -dy -G"
                                new_AM_CFLAGS="-KPIC -DPIC"
                                new_AM_LDFLAGS="-L${prefix}/lib -R${prefix}/lib"
                        elif test "x${ax_cv_c_compiler_vendor}"="xgnu" ; then
                                SOLINK="-shared -Xlinker -x"
                                new_AM_CFLAGS="-fPIC"
                                new_AM_LDFLAGS=""
                        fi
                        DYNAMIC_LIB_EXTEN="so"
                        IN_LINE=inline
		;;
esac
#  Enable 64 bit build
AC_ARG_ENABLE(64,
[AC_HELP_STRING([--enable-64],[build with 64 bit support])],[enable_64="$enable_64"],[enable_64="no"])

if test "x${ax_cv_c_compiler_vendor}"  =  "xsun" ; then
    if test "${enable_64}" = "yes"; then
        new_AM_CFLAGS="$new_AM_CFLAGS -m64"
    fi
fi


AC_SUBST(new_AM_CFLAGS)
AC_SUBST(new_AM_LDFLAGS)
AC_SUBST(SOLINK)
AC_SUBST(DYNAMIC_LIB_EXTEN)
AC_DEFINE_UNQUOTED([__inline__],[$IN_LINE],[sunpro is bad at inline])

dnl Check for libraries
dnl None available

dnl Check header files
AC_HEADER_STDC

AC_SUBST(LIBS)
AC_ARG_ENABLE(snomhack,     [  --enable-snomhack       Use slower memset for SNOM phoneem ],,enable_snomhack=no)
AC_ARG_ENABLE(extreme_debug,     [  --enable-extreme-debug  Compile with extreme debugging code enabled ],,enable_extreme_debug=no)
AC_ARG_ENABLE(newjb,     [  --enable-newjb       Use new jitter buffer  ], [CFLAGS="$CFLAGS -DNEWJB"])
if test "$enable_snomhack" = yes ; then
	AC_DEFINE(SNOM_HACK)
fi

if test "$enable_extreme_debug" = yes ; then
	AC_DEFINE(EXTREME_DEBUG)
fi

AC_SUBST(IAX_VERSION)

AC_OUTPUT([
Makefile
src/Makefile
iax.spec
iax-config],[case "$CONFIG_FILES" in
*iax-config*)chmod +x iax-config;;
esac])
